fixing transaction and insert query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=book-rental
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/librarydb}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:library}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:library}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:libraryUser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:libraryPass}
 
 
 spring.jpa.hibernate.ddl-auto=none
